--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -214,6 +214,12 @@
     }
 }
 
+.style-capitalize-first-letter {
+    &:first-letter {
+        text-transform: uppercase;
+    }
+}
+
 .style-title-list {
     font-size: 16px;
     line-height: 1.3;
@@ -1224,10 +1230,21 @@
     text-decoration: underline;
 }
 
+.style-color-box {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 2px;
+    vertical-align: middle;
+}
+
 .style-subtle-link {
-    font-weight: $font-weight-default;
-    text-decoration: underline;
-    text-decoration-color: $color-border;
+    &, &:link, &:visited, &:hover, &:active {
+        color: $color-gray-text;
+        font-weight: $font-weight-default;
+        text-decoration: underline;
+        text-decoration-color: $color-border;
+    }
 
     &:hover {
         text-decoration-color: $color-gray-text;
