Added signature width limit

--- a/frontend/app/dashboard/src/views/dashboard/documents/templates/participation.html
+++ b/frontend/app/dashboard/src/views/dashboard/documents/templates/participation.html
@@ -139,7 +139,7 @@
 
             .signature {
                 max-height: 150px;
-                max-width: 100%;
+                max-width: min(10cm, 100%);
                 display: block;
                 height: auto;
                 width: auto;
