Improved patch diffing

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -370,11 +370,18 @@
     line-height: 1.4;
     font-weight: $font-weight-medium;
     text-decoration: line-through;
+    color: $color-error-dark;
+
+    &:hover {
+        text-decoration: none;
+    }
 }
 .style-value-new {
     font-size: 15px;
     line-height: 1.4;
     font-weight: $font-weight-medium;
+    color: $color-success-dark;
+
 }
 
 .style-discount-old-price {
