--- a/frontend/shared/scss/components/icons.scss
+++ b/frontend/shared/scss/components/icons.scss
@@ -68,6 +68,10 @@
         color: $color-success;
     }
 
+    &.stripe {
+        color: #635BFF;
+    }
+
     &.red {
         color: $color-error;
     }
