--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -746,6 +746,49 @@
     }
 }
 
+.style-tooltip {
+    position: relative;
+    width: max-content;
+    cursor: help;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    user-select: none;
+    
+    &:before {
+        content: '';
+        position: absolute;
+        top: -6px;
+        left: -6px;
+        right: -6px;
+        bottom: -6px;
+        border-radius: $border-radius;
+        background: transparent;
+        border: 2px solid $color-primary-background;
+        z-index: -1;
+        opacity: 0;
+        transition: opacity 0.2s;
+    }
+
+    @media (hover: hover) {
+        &:after {
+            content: '';
+            position: absolute;
+            top: -3px;
+            left: -6px;
+            right: -6px;
+            bottom: -3px;
+            border-radius: $border-radius;
+            background: black;
+            z-index: 1000;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        &:hover:after {
+            opacity: 0.05;
+        }
+    }
+}
 .details-grid {
     display: grid;
     grid-template-columns: auto 1fr;
