--- a/frontend/shared/scss/base/variables.scss
+++ b/frontend/shared/scss/base/variables.scss
@@ -31,15 +31,16 @@ $border-radius: 8px;
 $border-radius-modals: 15px;
 
 @function invertColor($color, $offset: 0) {
-  @return hsl(color.hue($color), color.saturation($color), calc(100% - #{color.lightness($color) + $offset}));;
+    @return hsl(color.hue($color), calc(var(--color-saturation-factor, 1) * color.saturation($color)), calc(100% - #{color.lightness($color) + $offset}));
 }
 
 @function changeHue($color, $hue) {
-  @return hsl(#{$hue}, calc(var(--color-saturation-factor, 1) * color.saturation($color)), #{color.lightness($color)});
+    @return hsl(#{$hue}, calc(var(--color-saturation-factor, 1) * var(--color-primary-saturation-factor, 1) * color.saturation($color)), #{color.lightness($color)});
 }
 
 @function changeHueInvert($color, $hue, $offset: 0) {
-  @return hsl(#{$hue}, calc(var(--color-saturation-factor, 1) * color.saturation($color)), calc(100% - #{color.lightness($color) + $offset}));;
+    @return hsl(#{$hue}, calc(var(--color-saturation-factor, 1) * var(--color-primary-saturation-factor, 1) * color.saturation($color)), calc(100% - #{color.lightness($color) + $offset}));
+    ;
 }
 
 // -----------------------------------------------------------------------------
@@ -72,19 +73,19 @@ $color-primary-background: var(--color-primary-background, #{changeHue($color-pr
 $color-primary-dark: var(--color-primary-dark, #{changeHue($color-primary-dark-original, $color-primary-hue)});
 $color-primary-gray-light: var(--color-primary-gray-light, #{changeHue($color-primary-gray-light-original, $color-primary-hue)});
 
-$dark-theme-color-primary-lighter: changeHueInvert($color-primary-lighter-original, $color-primary-hue, -5);
-$dark-theme-color-primary-light: changeHueInvert($color-primary-light-original, $color-primary-hue, -5);
+$dark-theme-color-primary-lighter: changeHueInvert($color-primary-lighter-original, $color-primary-hue, 0);
+$dark-theme-color-primary-light: changeHueInvert($color-primary-light-original, $color-primary-hue, -3);
 // The primary background color in dark mode should be adjusted a bit for contrast 
 // -> hence we don't invert the same color
-$dark-theme-color-primary-background: changeHueInvert($color-primary-background-original, $color-primary-hue, -5);
-$dark-theme-color-primary-dark: changeHueInvert($color-primary-dark-original, $color-primary-hue, -5);
-$dark-theme-color-primary-gray-light: changeHueInvert($color-primary-gray-light-original, $color-primary-hue, -5);
+$dark-theme-color-primary-background: changeHueInvert($color-primary-background-original, $color-primary-hue, -4);
+$dark-theme-color-primary-dark: changeHueInvert($color-primary-dark-original, $color-primary-hue, -4);
+$dark-theme-color-primary-gray-light: changeHueInvert($color-primary-gray-light-original, $color-primary-hue, -4);
 
 // -----------------------------------------------------------------------------
 // -------- Dark (black) -------------------------------------------------------
 // -----------------------------------------------------------------------------
 
-$color-dark-original: #1e1e1e;// #000716;
+$color-dark-original: #1e1e1e; // #000716;
 $color-dark: var(--color-dark, $color-dark-original);
 $dark-theme-color-dark: hsl(0deg, 0%, 90%);
 
@@ -111,10 +112,10 @@ $dark-theme-color-background-shade-darker: invertColor($color-background-shade-d
 
 // Used for segmented control in dark mode: instead of darker, it should become lighter
 $color-background-highlight: var(--color-background-highlight, #ffffff);
-$dark-theme-color-background-highlight: hsl(#{$color-primary-hue}, 0%, 26%);
+$dark-theme-color-background-highlight: hsl(#{$color-primary-hue}, 10%, 29%);
 
 $color-background-interactive: var(--color-background-interactive, #ffffff);
-$dark-theme-color-background-interactive: $color-dark;
+$dark-theme-color-background-interactive: black;
 
 
 // -----------------------------------------------------------------------------
@@ -187,27 +188,27 @@ $color-warning-border: var(--color-warning-border, $color-warning-border-origina
 
 $color-gray-original: #868686;
 $color-gray-1: var(--color-gray-1, $color-gray-original);
-$dark-theme-color-gray-1: hsl(color.hue($color-gray-original), color.saturation($color-gray-original), calc(100% - #{color.lightness($color-gray-original)}));
+$dark-theme-color-gray-1: invertColor($color-gray-original); //hsl(color.hue($color-gray-original), color.saturation($color-gray-original), calc(100% - #{color.lightness($color-gray-original)}));
 
 $color-gray-2-original: #dcdcdc;
 $color-gray-2: var(--color-gray-2, $color-gray-2-original);
-$dark-theme-color-gray-2: hsl(color.hue($color-gray-2-original), color.saturation($color-gray-2-original), calc(100% - #{color.lightness($color-gray-2-original)}));
+$dark-theme-color-gray-2: invertColor($color-gray-2-original); //hsl(color.hue($color-gray-2-original), color.saturation($color-gray-2-original), calc(100% - #{color.lightness($color-gray-2-original)}));
 
 $color-gray-3-original: #E5E5E5;
 $color-gray-3: var(--color-gray-3, $color-gray-3-original);
-$dark-theme-color-gray-3: hsl(color.hue($color-gray-3-original), color.saturation($color-gray-3-original), calc(100% - #{color.lightness($color-gray-3-original)}));
+$dark-theme-color-gray-3: invertColor($color-gray-3-original); //hsl(color.hue($color-gray-3-original), color.saturation($color-gray-3-original), calc(100% - #{color.lightness($color-gray-3-original)}));
 
 // Usage: descriptive text
 $color-gray-4-original: #5e5e5e;
 $color-gray-4: var(--color-gray-4, $color-gray-4-original);
-$dark-theme-color-gray-4: hsl(color.hue($color-gray-4-original), color.saturation($color-gray-4-original), calc(100% - #{color.lightness($color-gray-4-original)}));
+$dark-theme-color-gray-4: invertColor($color-gray-4-original); //hsl(color.hue($color-gray-4-original), color.saturation($color-gray-4-original), calc(100% - #{color.lightness($color-gray-4-original)}));
 
 $color-gray-text: $color-gray-4;
 
 // Usage: text that is not important
 $color-gray-5-original: #a7a7a7;
 $color-gray-5: var(--color-gray-5, $color-gray-5-original);
-$dark-theme-color-gray-5: hsl(color.hue($color-gray-5-original), color.saturation($color-gray-5-original), calc(100% - #{color.lightness($color-gray-5-original)}));
+$dark-theme-color-gray-5: invertColor($color-gray-5-original); //hsl(color.hue($color-gray-5-original), color.saturation($color-gray-5-original), calc(100% - #{color.lightness($color-gray-5-original)}));
 
 // -----------------------------------------------------------------------------
 // -------- Secundary (purple) -------------------------------------------------
@@ -287,9 +288,9 @@ $color-discount-border-focus: $color-discount;
 
 // Aliasses
 
-$color-border-lighter: $color-gray-3; 
-$color-border-original: $color-gray-2; 
-$color-border: $color-gray-2; 
+$color-border-lighter: $color-gray-3;
+$color-border-original: $color-gray-2;
+$color-border: $color-gray-2;
 
 $color-border-shade-original: #D1D1D1;
 $color-border-shade: var(--color-border-shade, $color-border-shade-original);
@@ -314,80 +315,82 @@ $color-box-shadow: var(--color-box-shadow, $color-box-shadow-original);
 $color-current-background: var(--color-current-background, #{$color-background});
 
 @mixin dark-modus {
-  --color-background: #{$dark-theme-color-background};
-  --color-background-shade: #{$dark-theme-color-background-shade};
-  --color-background-shade-darker: #{$dark-theme-color-background-shade-darker};
+    // Reduce color a little bit
+    --color-saturation-factor: 0.85;
+    --color-background: #{$dark-theme-color-background};
+    --color-background-shade: #{$dark-theme-color-background-shade};
+    --color-background-shade-darker: #{$dark-theme-color-background-shade-darker};
 
-  --color-dark: #{$dark-theme-color-dark};
-  --color-dark-light: #{$dark-theme-color-dark-light};
-  --color-gray-1: #{$dark-theme-color-gray-1};
-  --color-gray-2: #{$dark-theme-color-gray-2};
-  --color-gray-3: #{$dark-theme-color-gray-3};
-  --color-gray-4: #{$dark-theme-color-gray-4};
+    --color-dark: #{$dark-theme-color-dark};
+    --color-dark-light: #{$dark-theme-color-dark-light};
+    --color-gray-1: #{$dark-theme-color-gray-1};
+    --color-gray-2: #{$dark-theme-color-gray-2};
+    --color-gray-3: #{$dark-theme-color-gray-3};
+    --color-gray-4: #{$dark-theme-color-gray-4};
 
-  --color-background-highlight: #{$dark-theme-color-background-highlight};
-  --color-background-interactive: #{$dark-theme-color-background-interactive};
+    --color-background-highlight: #{$dark-theme-color-background-highlight};
+    --color-background-interactive: #{$dark-theme-color-background-interactive};
 
-  --color-error-dark: #{$dark-theme-color-error-dark};
-  --color-error-background: #{$dark-theme-color-error-background};
-  --color-error-border: #{$dark-theme-color-error-border};
+    --color-error-dark: #{$dark-theme-color-error-dark};
+    --color-error-background: #{$dark-theme-color-error-background};
+    --color-error-border: #{$dark-theme-color-error-border};
 
-  --color-success-dark: #{$dark-theme-color-success-dark};
-  --color-success-background: #{$dark-theme-color-success-background};
-  --color-success-border: #{$dark-theme-color-success-border};
+    --color-success-dark: #{$dark-theme-color-success-dark};
+    --color-success-background: #{$dark-theme-color-success-background};
+    --color-success-border: #{$dark-theme-color-success-border};
 
-  --color-warning-dark: #{$dark-theme-color-warning-dark};
-  --color-warning-background: #{$dark-theme-color-warning-background};
-  --color-warning-border: #{$dark-theme-color-warning-border};
+    --color-warning-dark: #{$dark-theme-color-warning-dark};
+    --color-warning-background: #{$dark-theme-color-warning-background};
+    --color-warning-border: #{$dark-theme-color-warning-border};
 
-  --color-secundary-dark: #{$dark-theme-color-secundary-dark};
-  --color-secundary-background: #{$dark-theme-color-secundary-background};
-  --color-secundary-border: #{$dark-theme-color-secundary-border};
+    --color-secundary-dark: #{$dark-theme-color-secundary-dark};
+    --color-secundary-background: #{$dark-theme-color-secundary-background};
+    --color-secundary-border: #{$dark-theme-color-secundary-border};
 
-  --color-tertiary-dark: #{$dark-theme-color-tertiary-dark};
-  --color-tertiary-background: #{$dark-theme-color-tertiary-background};
-  --color-tertiary-border: #{$dark-theme-color-tertiary-border};
+    --color-tertiary-dark: #{$dark-theme-color-tertiary-dark};
+    --color-tertiary-background: #{$dark-theme-color-tertiary-background};
+    --color-tertiary-border: #{$dark-theme-color-tertiary-border};
 
-  --color-payconiq-dark: #{$dark-theme-color-payconiq-dark};
-  --color-payconiq-background: #{$dark-theme-color-payconiq-background};
-  --color-payconiq-border: #{$dark-theme-color-payconiq-border};
+    --color-payconiq-dark: #{$dark-theme-color-payconiq-dark};
+    --color-payconiq-background: #{$dark-theme-color-payconiq-background};
+    --color-payconiq-border: #{$dark-theme-color-payconiq-border};
 
-  --color-discount-dark: #{$dark-theme-color-discount-dark};
-  --color-discount-background: #{$dark-theme-color-discount-background};
-  --color-discount-border: #{$dark-theme-color-discount-border};
+    --color-discount-dark: #{$dark-theme-color-discount-dark};
+    --color-discount-background: #{$dark-theme-color-discount-background};
+    --color-discount-border: #{$dark-theme-color-discount-border};
 
-  --color-primary-lighter: #{$dark-theme-color-primary-lighter};
-  --color-primary-light: #{$dark-theme-color-primary-light};
-  --color-primary-background: #{$dark-theme-color-primary-background};
-  --color-primary-dark: #{$dark-theme-color-primary-dark};
-  --color-primary-gray-light: #{$dark-theme-color-primary-gray-light};
+    --color-primary-lighter: #{$dark-theme-color-primary-lighter};
+    --color-primary-light: #{$dark-theme-color-primary-light};
+    --color-primary-background: #{$dark-theme-color-primary-background};
+    --color-primary-dark: #{$dark-theme-color-primary-dark};
+    --color-primary-gray-light: #{$dark-theme-color-primary-gray-light};
 
-  --color-primary: #{$dark-theme-color-primary};
-  --color-primary-contrast: #{$dark-theme-color-primary-contrast};
+    --color-primary: #{$dark-theme-color-primary};
+    --color-primary-contrast: #{$dark-theme-color-primary-contrast};
 
-  --color-border-shade: #{$dark-theme-color-border-shade};
-  --color-border-shade-darker: #{$dark-theme-color-border-shade-darker};
+    --color-border-shade: #{$dark-theme-color-border-shade};
+    --color-border-shade-darker: #{$dark-theme-color-border-shade-darker};
 
-  // Manual
-  --color-shadow: rgba(255, 255, 255, 0.05);
-  --color-box-shadow: rgba(0, 0, 0, 0.5);
+    // Manual
+    --color-shadow: rgba(255, 255, 255, 0.05);
+    --color-box-shadow: rgba(0, 0, 0, 0.5);
 
-  .sheet,
-  .popup {
-    &:after {
-      background: $color-background-shade-darker;
-      opacity: 0.5;
+    .sheet,
+    .popup {
+        &:after {
+            background: $color-background-shade-darker;
+            opacity: 0.8;
+        }
+
+        &.show-enter-from,
+        &.show-leave-to {
+            &:after {
+                opacity: 0;
+            }
+        }
+
+        >div {
+            box-shadow: 0 0 0 1px $color-border, 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
+        }
     }
-
-    &.show-enter-from,
-    &.show-leave-to {
-      &:after {
-        opacity: 0;
-      }
-    }
-
-    >div {
-      box-shadow: 0 0 0 1px $color-border, 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
-    }
-  }
 }
