Added trials on organization level

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -170,6 +170,10 @@
     font-size: 18px;
     line-height: 1.3;
     font-weight: $font-weight-semibold;
+
+    > .style-tag {
+        margin-left: 5px;
+    }
 }
 
 .style-title-3 {
