--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -674,6 +674,12 @@
     }
 }
 
+.style-form-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+
 .style-description-small + .style-button-bar {
     margin-top: 10px;
 }
