--- a/frontend/shared/scss/components/checkbox.scss
+++ b/frontend/shared/scss/components/checkbox.scss
@@ -231,7 +231,7 @@ label.style-label {
 }
 
 // Checkbox: animate both when active and not checked (because you can disable it)
-label:active:not(:has(button:active, select:active, label:active, textarea:active, input:not([type=radio]):not([type=checkbox]):active)) .checkbox, .checkbox:active {
+label:active:not(:has(button:active, select:active, label:active, textarea:active, input:not([type=radio]):not([type=checkbox]):active, .input:active, .st-input-box:active)) .checkbox, .checkbox:active  {
     > input:not(:disabled) + div {
         > div:first-child {
             transform: scale(0.8, 0.8);
@@ -240,7 +240,7 @@ label:active:not(:has(button:active, select:active, label:active, textarea:activ
 }
 
 // Radio: only shrink if not yet checked
-label:active:not(:has(button:active, select:active, label:active, textarea:active, input:not([type=radio]):not([type=checkbox]):active)) .radio, .radio:active {
+label:active:not(:has(button:active, select:active, label:active, textarea:active, input:not([type=radio]):not([type=checkbox]):active, .input:active, .st-input-box:active)) .radio, .radio:active  {
     > input:not(:disabled):not(:checked) + div {
         > div:first-child {
             transform: scale(0.8, 0.8);
