--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -726,11 +726,11 @@
 
 .style-copyable {
     position: relative;
-    width: max-content;
     cursor: pointer;
     touch-action: manipulation;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     user-select: none;
+    max-width: fit-content;
     
     &:before {
         content: '';
