Fixed ugly blue color for diffed links

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -1396,6 +1396,7 @@
             font-weight: $font-weight-default;
             text-decoration: underline;
             text-decoration-color: $color-border;
+            color: inherit;
         }
         @extend .style-hover-area;
     }
