Fixed showing company name on fiscal documents and auto updating

--- a/frontend/app/dashboard/src/views/dashboard/documents/templates/fiscal.html
+++ b/frontend/app/dashboard/src/views/dashboard/documents/templates/fiscal.html
@@ -173,7 +173,7 @@
                 </p>
             </header>
             <div class="form-box">
-                <p>Naam van de instantie of de persoon (hierna ‘de instantie’) <strong>die instaat voor de opvang</strong> (2): <br><span class="override">{{organization.name}}</span></p>
+                <p>Naam van de instantie of de persoon (hierna ‘de instantie’) <strong>die instaat voor de opvang</strong> (2): <br><span class="override">{{organization.companyName}}</span></p>
                 <p>KBO nr. (facultatief): <span class="override">{{organization.companyNumber}}</span></p>
                 <p class="flex"><span>Straat: <span class="override">{{organization.address.street}}</span></span><span>Nr: <span class="override">{{organization.address.number}}</span></span></p>
                 <p class="flex"><span>Postcode: <span class="override">{{organization.address.postalCode}}</span></span><span>Gemeente: <span class="override">{{organization.address.city}}</span></span></p>
