--- a/frontend/app/dashboard/src/views/dashboard/documents/templates/fiscal.html
+++ b/frontend/app/dashboard/src/views/dashboard/documents/templates/fiscal.html
@@ -175,8 +175,8 @@
             <div class="form-box">
                 <p>Naam van de instantie of de persoon (hierna ‘de instantie’) <strong>die instaat voor de opvang</strong> (2): <br><span class="override">{{organization.companyName}}</span></p>
                 <p>KBO nr. (facultatief): <span class="override">{{organization.companyNumber}}</span></p>
-                <p class="flex"><span>Straat: <span class="override">{{organization.address.street}}</span></span><span>Nr: <span class="override">{{organization.address.number}}</span></span></p>
-                <p class="flex"><span>Postcode: <span class="override">{{organization.address.postalCode}}</span></span><span>Gemeente: <span class="override">{{organization.address.city}}</span></span></p>
+                <p class="flex"><span>Straat: <span class="override">{{organization.companyAddress.street}}</span></span><span>Nr: <span class="override">{{organization.companyAddress.number}}</span></span></p>
+                <p class="flex"><span>Postcode: <span class="override">{{organization.companyAddress.postalCode}}</span></span><span>Gemeente: <span class="override">{{organization.companyAddress.city}}</span></span></p>
             </div>
             <h2><u>Vak I</u><span> (dit vak moet niet altijd worden ingevuld – zie bericht)</span></h2>
             <div class="space"></div>
@@ -309,7 +309,7 @@
             <p>Ondergetekende bevestigt de juistheid van de hierboven vermelde inlichtingen.</p>
             <div class="space"></div>
             <div class="signature-box">
-                <p>Gedaan te {{organization.address.city}}, {{ formatDate created_at }}</p>
+                <p>Gedaan te {{organization.companyAddress.city}}, {{ formatDate created_at }}</p>
                 <div class="form-box">
                     <p>Persoon die gemachtigd is <strong>de opvanginstantie of persoon die instaat voor de opvang</strong> (2) te verbinden (7).</p>
                     <div class="space"></div>
