Improved webshop orders loading and offline handling
fixes STA-660

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -137,6 +137,7 @@
     &.with-icons {
         display: flex;
         align-items: center;
+        gap: 5px;
 
         > *:first-child {
             overflow: hidden;
